// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Breadcrumb App Details Page 1`] = `
<section
  class="storybook-snapshot-container"
>
  <ol
    class="flex border-b-2 py-2 divide-x "
  >
    <li
      class="px-2"
    >
      <a
        href="/"
      >
        apps
      </a>
    </li>
    <li
      class="px-2"
    >
      <a
        href="/apps/fenix/"
      >
        fenix
      </a>
    </li>
  </ol>
</section>
`;

exports[`Storyshots Breadcrumb Apps List Page 1`] = `
<section
  class="storybook-snapshot-container"
>
  <ol
    class="flex border-b-2 py-2 divide-x "
  >
    <li
      class="px-2"
    >
      <a
        href="/"
      >
        apps
      </a>
    </li>
  </ol>
</section>
`;

exports[`Storyshots Breadcrumb Big Query Table Page 1`] = `
<section
  class="storybook-snapshot-container"
>
  <ol
    class="flex border-b-2 py-2 divide-x "
  >
    <li
      class="px-2"
    >
      <a
        href="/"
      >
        apps
      </a>
    </li>
    <li
      class="px-2"
    >
      <a
        href="/apps/fenix/"
      >
        fenix
      </a>
    </li>
    <li
      class="px-2"
    >
      <a
        href="/apps/fenix/pings/activation"
      >
        activation
      </a>
    </li>
    <li
      class="px-2"
    >
      <a
        href="/apps/fenix/tables/activation/"
      >
        activation table
      </a>
    </li>
  </ol>
</section>
`;

exports[`Storyshots Breadcrumb Metric Page 1`] = `
<section
  class="storybook-snapshot-container"
>
  <ol
    class="flex border-b-2 py-2 divide-x "
  >
    <li
      class="px-2"
    >
      <a
        href="/"
      >
        apps
      </a>
    </li>
    <li
      class="px-2"
    >
      <a
        href="/apps/fenix/"
      >
        fenix
      </a>
    </li>
    <li
      class="px-2"
    >
      <a
        href="/apps/fenix/metrics/about_page.libraries_tapped"
      >
        about_page.libraries_tapped
      </a>
    </li>
  </ol>
</section>
`;

exports[`Storyshots Breadcrumb Ping Page 1`] = `
<section
  class="storybook-snapshot-container"
>
  <ol
    class="flex border-b-2 py-2 divide-x "
  >
    <li
      class="px-2"
    >
      <a
        href="/"
      >
        apps
      </a>
    </li>
    <li
      class="px-2"
    >
      <a
        href="/apps/fenix/"
      >
        fenix
      </a>
    </li>
    <li
      class="px-2"
    >
      <a
        href="/apps/fenix/pings/activation"
      >
        activation
      </a>
    </li>
  </ol>
</section>
`;

exports[`Storyshots Email Addresses Multiple Emails 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span
    class="block"
  >
    <a
      href="mailto:example@example.com"
    >
      example@example.com
    </a>
  </span>
  <span
    class="block"
  >
    <a
      href="mailto:email@email.com"
    >
      email@email.com
    </a>
  </span>
  <span
    class="block"
  >
    <a
      href="mailto:post@pigeon.com"
    >
      post@pigeon.com
    </a>
  </span>
  
</section>
`;

exports[`Storyshots Email Addresses Single Email 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span
    class="block"
  >
    <a
      href="mailto:glean@mozilla.com"
    >
      glean@mozilla.com
    </a>
  </span>
  
</section>
`;

exports[`Storyshots FilterInput Basic 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="container"
  >
    <div
      class="container py-4 mx-auto"
    >
      <input
        class="shadow appearance-none border rounded w-full p-2 text-gray-700
    leading-tight focus:outline-none focus:shadow-outline"
        placeholder="filter terms"
        type="text"
      />
    </div>
     
    <ul>
      <li>
        foo
      </li>
      <li>
        bar
      </li>
      <li>
        foobar
      </li>
      <li>
        lorem
      </li>
      <li>
        ipsum
      </li>
    </ul>
  </div>
</section>
`;

exports[`Storyshots ItemList Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="container py-4 mx-auto"
  >
    <input
      class="shadow appearance-none border rounded w-full p-2 text-gray-700
    leading-tight focus:outline-none focus:shadow-outline"
      placeholder="filter terms"
      type="text"
    />
  </div>
   
  <div
    class="item-browser mx-auto my-4 p-2 svelte-xr7n6m"
  >
    <ul>
      <li>
        <a
          href="/apps/app-name/metrics/Test metric 0"
        >
          Test metric 0
        </a>
         
        <i>
          This is test metric 0
          
        </i>
         
      </li>
      <li>
        <a
          href="/apps/app-name/metrics/Test metric 1"
        >
          Test metric 1
        </a>
         
        <i>
          This is test metric 1
          
        </i>
         
      </li>
      <li>
        <a
          href="/apps/app-name/metrics/Test metric 2"
        >
          Test metric 2
        </a>
         
        <i>
          This is test metric 2
          
        </i>
         
      </li>
      <li>
        <a
          href="/apps/app-name/metrics/Test metric 3"
        >
          Test metric 3
        </a>
         
        <i>
          This is test metric 3
          
        </i>
         
      </li>
      <li>
        <a
          href="/apps/app-name/metrics/Test metric 4"
        >
          Test metric 4
        </a>
         
        <i>
          This is test metric 4
          
        </i>
         
      </li>
      <li>
        <a
          href="/apps/app-name/metrics/Test metric 5"
        >
          Test metric 5
        </a>
         
        <i>
          This is test metric 5
          
        </i>
         
      </li>
      <li>
        <a
          href="/apps/app-name/metrics/Test metric 6"
        >
          Test metric 6
        </a>
         
        <i>
          This is test metric 6
          
        </i>
         
      </li>
      <li>
        <a
          href="/apps/app-name/metrics/Test metric 7"
        >
          Test metric 7
        </a>
         
        <i>
          This is test metric 7
          
        </i>
         
      </li>
      <li>
        <a
          href="/apps/app-name/metrics/Test metric 8"
        >
          Test metric 8
        </a>
         
        <i>
          This is test metric 8
          
        </i>
         
      </li>
      <li>
        <a
          href="/apps/app-name/metrics/Test metric 9"
        >
          Test metric 9
        </a>
         
        <i>
          This is test metric 9
          
        </i>
         
      </li>
      <li>
        <a
          href="/apps/app-name/metrics/Test metric 10"
        >
          Test metric 10
        </a>
         
        <i>
          This is test metric 10
          
        </i>
         
      </li>
      <li>
        <a
          href="/apps/app-name/metrics/Test metric 11"
        >
          Test metric 11
        </a>
         
        <i>
          This is test metric 11
          
        </i>
         
      </li>
      <li>
        <a
          href="/apps/app-name/metrics/Test metric 12"
        >
          Test metric 12
        </a>
         
        <i>
          This is test metric 12
          
        </i>
         
      </li>
      <li>
        <a
          href="/apps/app-name/metrics/Test metric 13"
        >
          Test metric 13
        </a>
         
        <i>
          This is test metric 13
          
        </i>
         
      </li>
      <li>
        <a
          href="/apps/app-name/metrics/Test metric 14"
        >
          Test metric 14
        </a>
         
        <i>
          This is test metric 14
          
        </i>
         
      </li>
      <li>
        <a
          href="/apps/app-name/metrics/Test metric 15"
        >
          Test metric 15
        </a>
         
        <i>
          This is test metric 15
          
        </i>
         
      </li>
      <li>
        <a
          href="/apps/app-name/metrics/Test metric 16"
        >
          Test metric 16
        </a>
         
        <i>
          This is test metric 16
          
        </i>
         
      </li>
      <li>
        <a
          href="/apps/app-name/metrics/Test metric 17"
        >
          Test metric 17
        </a>
         
        <i>
          This is test metric 17
          
        </i>
         
      </li>
      <li>
        <a
          href="/apps/app-name/metrics/Test metric 18"
        >
          Test metric 18
        </a>
         
        <i>
          This is test metric 18
          
        </i>
         
      </li>
      <li>
        <a
          href="/apps/app-name/metrics/Test metric 19"
        >
          Test metric 19
        </a>
         
        <i>
          This is test metric 19
          
        </i>
         
      </li>
    </ul>
  </div>
   
  <p>
    Page
  
    <code>
      1
    </code>
    
  of
  
    <code>
      2
    </code>
    
  (
    <code>
      1
    </code>
    
  -
  
    <code>
      20
    </code>
    
  on
  
    <code>
      21
    </code>
    
  items)
  </p>
   
  <div
    class="flex flex-col items-center my-12"
  >
    <div
      class="flex text-gray-700"
    >
      <div
        class="h-12 w-12 mr-1 flex justify-center items-center rounded-full bg-gray-200 cursor-pointer bg-teal-600 text-white"
      >
        <svg
          class="feather feather-chevron-left w-6 h-6"
          fill="none"
          height="100%"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="15 18 9 12 15 6"
          />
        </svg>
      </div>
       
      <div
        class="flex h-12 font-medium rounded-full bg-gray-200"
      >
        <div
          class="w-12 md:flex justify-center items-center hidden cursor-pointer bg-teal-600 text-white"
        >
          1
           
        </div>
        <div
          class="w-12 md:flex justify-center items-center hidden cursor-pointer "
        >
          2
           
        </div>
      </div>
       
      <div
        class="h-12 w-12 ml-1 flex justify-center items-center rounded-full bg-gray-200 cursor-pointer "
      >
        <svg
          class="feather feather-chevron-right w-6 h-6"
          fill="none"
          height="100%"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="9 18 15 12 9 6"
          />
        </svg>
      </div>
    </div>
  </div>
  
  
</section>
`;

exports[`Storyshots Markdown Text 1`] = `
<section
  class="storybook-snapshot-container"
>
  A 
  <em>
    text
  </em>
   in markdown 
  <a
    href="https://mozilla.org"
  >
    moz
  </a>
  .
  
</section>
`;

exports[`Storyshots Pagination Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <p>
    Page
  
    <code>
      1
    </code>
    
  of
  
    <code>
      11
    </code>
    
  (
    <code>
      1
    </code>
    
  -
  
    <code>
      20
    </code>
    
  on
  
    <code>
      210
    </code>
    
  items)
  </p>
   
  <div
    class="flex flex-col items-center my-12"
  >
    <div
      class="flex text-gray-700"
    >
      <div
        class="h-12 w-12 mr-1 flex justify-center items-center rounded-full bg-gray-200 cursor-pointer bg-teal-600 text-white"
      >
        <svg
          class="feather feather-chevron-left w-6 h-6"
          fill="none"
          height="100%"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="15 18 9 12 15 6"
          />
        </svg>
      </div>
       
      <div
        class="flex h-12 font-medium rounded-full bg-gray-200"
      >
        <div
          class="w-12 md:flex justify-center items-center hidden cursor-pointer bg-teal-600 text-white"
        >
          1
           
        </div>
        <div
          class="w-12 md:flex justify-center items-center hidden cursor-pointer "
        >
          2
           
        </div>
        <div
          class="w-12 md:flex justify-center items-center hidden cursor-pointer "
        >
          3
           
        </div>
        <div
          class="w-12 md:flex justify-center items-center hidden cursor-pointer "
        >
          ...
           
        </div>
        <div
          class="w-12 md:flex justify-center items-center hidden cursor-pointer "
        >
          11
           
        </div>
      </div>
       
      <div
        class="h-12 w-12 ml-1 flex justify-center items-center rounded-full bg-gray-200 cursor-pointer "
      >
        <svg
          class="feather feather-chevron-right w-6 h-6"
          fill="none"
          height="100%"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="9 18 15 12 9 6"
          />
        </svg>
      </div>
    </div>
  </div>
  
</section>
`;

exports[`Storyshots Pill Deprecated 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="pill svelte-1ohi0f1"
    style="background-color: rgb(74, 85, 104);"
  >
    Deprecated
  </div>
</section>
`;

exports[`Storyshots Schema Viewer Basic 1`] = `
<section
  class="storybook-snapshot-container"
>
  <h2>
    Schema
  </h2>
   
  <div
    class="container py-4 mx-auto"
  >
    <input
      class="shadow appearance-none border rounded w-full p-2 text-gray-700
    leading-tight focus:outline-none focus:shadow-outline"
      placeholder="filter terms"
      type="text"
    />
  </div>
   
  <div
    class="container schema-browser mx-auto svelte-gyw6bu"
  >
    <p>
      <div
        style=""
      >
        <p>
          <span
            class="text-gray-700"
          >
            
            
          </span>
          <span>
            additional_properties
          </span>
        </p>
         
        <p
          class="text-gray-600 text-xs ml-2"
        >
          A JSON string containing any payload properties not present in the schema
        </p>
         
      </div>
       
      
      <div
        style=""
      >
        <p>
          <span
            class="text-gray-700"
          >
            
            
          </span>
          <span>
            client_info
          </span>
        </p>
         
         
      </div>
       
      <div
        style=""
      >
        <p>
          <span
            class="text-gray-700"
          >
            client_info
            .
          </span>
          <span>
            os_version
          </span>
        </p>
         
        <p
          class="text-gray-600 text-xs ml-2"
        >
          The user-visible version of the operating system (e.g. "1.2.3"). If the version detection fails, this metric gets set to \`Unknown\`.
        </p>
         
      </div>
       
      
      <div
        style=""
      >
        <p>
          <span
            class="text-gray-700"
          >
            client_info
            .
          </span>
          <span>
            telemetry_sdk_build
          </span>
        </p>
         
        <p
          class="text-gray-600 text-xs ml-2"
        >
          The version of the Glean SDK
        </p>
         
      </div>
       
      
      
      
      <div
        style=""
      >
        <p>
          <span
            class="text-gray-700"
          >
            
            
          </span>
          <span>
            document_id
          </span>
        </p>
         
        <p
          class="text-gray-600 text-xs ml-2"
        >
          The document ID specified in the URI when the client sent this message
        </p>
         
      </div>
       
      
    </p>
  </div>
</section>
`;

exports[`Storyshots Tab Basic 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="tabs"
  />
   
  <div
    class="tab-content"
  >
    <div
      class="title svelte-19v3j9g active"
    >
      A
    </div>
    <div
      class="title svelte-19v3j9g"
    >
      B
    </div>
     
    <div
      class="box svelte-w20ggk"
    >
      Content for Tab A
    </div>
    
    
    
  </div>
</section>
`;
